--- a/App/css/master.css
+++ b/App/css/master.css
@@ -367,13 +367,13 @@ span.formErrorMsg.ok {
 /*** BUDGET ***/
 
 /* slightly transparent fallback */
-.budgetHeader {
+.budgetHeader, .transactionsHeader {
     background-color: rgba(67, 67, 90, .9);
 }
 
 /* if backdrop support: very transparent and blurred */
 @supports ((-webkit-backdrop-filter: blur(2em)) or (backdrop-filter: blur(2em))) {
-    .budgetHeader {
+    .budgetHeader, .transactionsHeader {
         background-color: rgba(67, 67, 90, .5);
         -webkit-backdrop-filter: blur(2em);
         backdrop-filter: blur(2em);
@@ -390,6 +390,16 @@ span.formErrorMsg.ok {
     top: 0;
     left: 0;
     z-index: 1;
+}
+
+.tableEditor {
+    position: fixed;
+    top: 69px;
+    z-index: 1;
+}
+
+.transactionsTable {
+    margin-top: calc(69px + 37px);
 }
 
 .budgetTable .budDesc {
@@ -412,13 +422,13 @@ span.formErrorMsg.ok {
 
 
 /* slightly transparent fallback */
-.budgetTable .budDesc {
+.budgetTable .budDesc, .tableEditor {
     background-color: rgba(255, 255, 255, .9);
 }
 
 /* if backdrop support: very transparent and blurred */
 @supports ((-webkit-backdrop-filter: blur(2em)) or (backdrop-filter: blur(2em))) {
-    .budgetTable .budDesc {
+    .budgetTable .budDesc, .tableEditor {
         background-color: rgba(255, 255, 255, .5);
         -webkit-backdrop-filter: blur(2em);
         backdrop-filter: blur(2em);
@@ -681,6 +691,9 @@ table.budgetTable {
 
 .reportsButton {
     background-image: url("../images/icons/svg/reports-white.svg");
+}
+
+.inactiveMenu {
     opacity: 0.5;
     cursor: default;
 }
@@ -1037,6 +1050,8 @@ table.budgetTable {
 }
 
 /* Transactions table editor */
+
+
 
 .tableEditor {
     display: grid;
