--- a/App/css/responsive.css
+++ b/App/css/responsive.css
@@ -272,6 +272,10 @@
         left: 300px;
     }
 
+    .tableEditor {
+        top: 57px;
+    }
+
     .transactionsSection {
         margin-top: 57px;
     }
