--- a/App/css/master.css
+++ b/App/css/master.css
@@ -382,6 +382,10 @@ span.formErrorMsg.ok {
 
 /* Fixed headers */
 
+.transactionsHeader {
+    min-height: 69px;
+}
+
 .budgetHeader, .transactionsHeader {
     color: #fff;
     padding: 5px 0;
@@ -1050,6 +1054,8 @@ table.budgetTable {
     margin: 0;
 }
 
+
+
 /* Menu */
 
 .mainMenu .accountDiv.active,
@@ -1074,13 +1080,23 @@ table.budgetTable {
     align-items: center;
 }
 
+.tableEditor #addTransaction {
+    border: none;
+    background: none;
+    color: var(--orange);
+    font-weight: 300;
+    font-size: 14px;
+    cursor: pointer;
+}
+
 .transactionsSection .tableEditor #addTransaction div {
     display: flex;
     align-items: center;
+    margin-left: -10px;
 }
 
 .tableEditor #addTransaction div img {
-    margin-left: 8px;
+    margin-left: 5px;
     margin-right: 5px;
 }
 
@@ -1101,9 +1117,26 @@ table.transactionsTable {
     background-color: var(--category);
 }
 
+input[type="date"]
+{
+    display:block;
+    -webkit-appearance: textfield;
+    -moz-appearance: textfield;
+    min-height: 1.2em;
+}
+
 .tranElem {
     font-size: 16px;
-    padding: 5px 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 5px;
+    margin: 0;
+}
+
+.tranElem input:focus {
+    border: solid 1px var(--orange);
+    box-shadow: 0 0 5px var(--orange);
+    outline: none;
 }
 
 .tranDate, .tranName, .tranCat {
@@ -1114,6 +1147,10 @@ table.transactionsTable {
     width: 10%;
     padding-left: 5px;
     padding-right: 10px;
+}
+
+.tranDate input {
+    width: 100%;
 }
 
 .tranDate.tranElem {
@@ -1129,10 +1166,18 @@ table.transactionsTable {
     font-weight: 600;
 }
 
+.tranName input {
+    width: 100%;
+}
+
 .tranCat.tranElem {
     opacity: 0.5;
     font-size: 14px;
     font-style: italic;
+}
+
+.tranCat input {
+    width: 100%;
 }
 
 .tranCost {
@@ -1143,6 +1188,11 @@ table.transactionsTable {
 
 .tranCost.tranElem {
     font-weight: 600;
+}
+
+.tranCost input {
+    width: 100%;
+    text-align: right;
 }
 
 .tranAccept.not {
@@ -1158,6 +1208,36 @@ table.transactionsTable {
 .transactionRow .small {
     display: flex;
     flex-flow: column;
+}
+
+#newTransactionRow {
+    background-color: var(--darkGrey);
+    border: none;
+}
+
+#newTransactionRow input {
+    border-radius: 5px;
+    border: none;
+}
+
+#newTransactionRowButtons {
+    width: 100%;
+}
+
+#newTransactionRowButtons button {
+    width: 50%;
+    background: none;
+    border: none;
+    color: #fff;
+    padding: 8px 0;
+}
+
+#newTransactionRowButtons .accept {
+    background-color: var(--orange);
+}
+
+#newTransactionRowButtons .cancel {
+    background-color: var(--lightGrey);
 }
 
 /*** SETTINGS ***/
