Available colors patch

--- a/App/css/master.css
+++ b/App/css/master.css
@@ -592,6 +592,10 @@ table.budgetTable {
     background-color: var(--yellow);
 }
 
+.budCategory span.redAmount {
+    background-color: var(--red);
+}
+
 .budCategory span.greyAmount {
     background-color: var(--grey);
 }
